[package]
name = "mcp2515"
description = "`#![no_std]` library for interacting with MCP2515 CAN controller chips."
version = "0.3.0"
authors = ["David Cole <david.cole1340@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/davidcole1340/mcp2515-rs"
categories = ["no-std", "embedded"]
keywords = ["can", "mcp2515"]
resolver = "2"

[features]
default = ["blocking"]
blocking = ["maybe-async/is_sync"]
async = ["dep:embedded-hal-async"]
defmt = ["dep:defmt", "embedded-hal/defmt-03", "embedded-hal-async?/defmt-03"]

[dependencies]
bitflags = "1.3.2"
embedded-hal = "1.0"
embedded-can = "0.4"
modular-bitfield = "0.11.2"
nb = "1.0.0"
void = { version = "1.0.2", default-features = false }

defmt = { version = "0.3.6", optional = true }
ufmt = { version = "0.2.0", optional = true }
maybe-async = "0.2"
embedded-hal-async = { version = "1.0", optional = true }
