[package]
name = "mcp2515-arduino"
version = "0.1.0"
authors = ["David Cole <david.cole1340@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
mcp2515 = { path = "../../", features = ["ufmt"] }
panic-halt = "0.2.0"
ufmt = "0.2.0"
nb = "1.1.0"
embedded-hal = "1.0.0"
embedded-can = "0.4.1"
embedded-hal-bus = "0.2.0"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "3e362624547462928a219c40f9ea8e3a64f21e5f"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
